# samsung_kernel

./: 1  Android.bp  Android.mk  AndroidKernel.mk  Kconfig  MAINTAINERS  Makefile  Makefile.orig  Makefile_new  Makefile~  Module.symvers  README  SPRD-REVIEWERS  System.map  abi_greylist  build-all.py  build.config.erd3830  build.config.erd3830_t  build.config.erd3830_tu_mr  build.config.erd3830_tu_mr_non_gki  build.config.erd8535_t  build.config.erd8825_a25_s  build.config.erd8825_s  build.config.erd8835_t  build.config.erd9925_evt0_s  build.config.erd9925_evt0_s5300_s  build.config.erd9925_s  build.config.erd9925_s6165_s  build.config.erd9925_s6165_t  build.config.erd9925_t  build.config.erd9935_t  build.config.gki.aarch64  build.config.m2  build.config.mcd  build.config.smdk3830  build.config.universal2100_r  build.config.universal2100_s  build.config.universal3830  build.config.universal3830_32bit_s  build.config.universal3830_32bit_st_mr  (+79 more)
drivers/marvell/blcr/blcr_imports/: Makefile  Makefile.am  Makefile.in  import_check.c  imports.c  imports.c.in  module.c
drivers/marvell/blcr/cr_module/: Makefile  Makefile.am  Makefile.in  cr_chkpt_req.c  cr_compat.c  cr_context.h  cr_dump_self.c  cr_fops.c  cr_io.c  cr_kcompat.h  cr_mmaps.c  cr_module.c  cr_module.h  cr_pipes.c  cr_rstrt_req.c  vmadump_arm.c  vmadump_common.c
drivers/marvell/blcr/include/: Makefile.am  Makefile.in  blcr_common.h  blcr_common.h.in  blcr_imports.h  blcr_imports.h.in  blcr_ksyms.h  blcr_proc.h  blcr_vmadump.h  libcr.h
drivers/marvell/blcr/vmadump4/: Makefile.am  Makefile.in  vmadcheck.c  vmadlib.c  vmadstress.c  vmadtest.c  vmadump.h  vmadump_alpha.c  vmadump_arm.c  vmadump_common.c  vmadump_i386.c  vmadump_ppc.c  vmadump_ppc64.c  vmadump_sparc.c  vmadump_sparc64.c  vmadump_x86.h  vmadump_x86_64.c
kernel/kernel_device_modules-6.1/: .Kbuild.lego.updated  .Kconfig.ext.lego.updated  .config  .lego_dtbo_list  .legofile  BUILD.bazel  Kbuild  Kconfig.ext  MAINTAINERS  Makefile  Makefile.ext  Makefile.include  build.config.mtk.aarch64.mgk  build.config.mtk_kernel_device_modules  build.sh  build_abi.sh  fake_manifest.xml  kenv.mk  lego.bzl  lego_dtbo  lego_module
kernel/kernel_device_modules-6.1/android/: abi_gki_aarch64_mtk
kernel/kernel_device_modules-6.1/arch/arm64/: Kconfig
kernel/kernel_device_modules-6.1/block/: Kconfig  Makefile  blk-sec-stat-traffic.c  blk-sec-wb.c  ssg-iosched.c  ssg-stat.c  ssg-wb.c  ssg.h
kernel/kernel_device_modules-6.1/drivers/char/: Kconfig  Makefile
kernel/kernel_device_modules-6.1/drivers/clocksource/: Kconfig  Makefile  timer-mediatek-trace.h  timer-mediatek.c
kernel/kernel_device_modules-6.1/drivers/cpufreq/: Kconfig  Kconfig.arm  Makefile  cpufreq_limit.c  mediatek-cpufreq-hw_fdvfs.c  mediatek-cpufreq-hw_fdvfs.h  mediatek-cpufreq-hw_main.c
kernel/kernel_device_modules-6.1/drivers/devfreq/: Kconfig  Makefile
kernel/kernel_device_modules-6.1/drivers/fingerprint/: el7xx-spi.c  el7xx.h  fingerprint_common_mtk_v2.c
kernel/kernel_device_modules-6.1/drivers/interconnect/: Kconfig  Makefile
kernel/kernel_device_modules-6.1/drivers/iommu/: Kconfig  Makefile  mtk_iommu.c  mtk_iommu.h
kernel/kernel_device_modules-6.1/drivers/irqchip/: Kconfig  Makefile
kernel/kernel_device_modules-6.1/drivers/kperfmon/: Makefile  ologk.c  perflog.h
kernel/kernel_device_modules-6.1/drivers/leds/: Kconfig  Makefile  leds-mt6360.c  leds-mtk-disp.c  leds-mtk-pwm.c  leds-mtk.c  leds-mtk.h  leds-sm5714-fled.c  leds-sm5714-fled.h
kernel/kernel_device_modules-6.1/drivers/mailbox/: Kconfig  Makefile  mtk-ise-mailbox.c  mtk-ise-mailbox.h  mtk-mbox-mailbox.c
kernel/kernel_device_modules-6.1/drivers/memory/: Kconfig  Makefile  mtk-smi.c
kernel/kernel_device_modules-6.1/drivers/mfd/: Kconfig  Makefile  mt6338-core.c  mt6375.c  mt6681-core.c  mt6685-core.c  mtk-spmi-pmic.c  rt9490.c
kernel/kernel_device_modules-6.1/drivers/misc/: Kconfig  Makefile
kernel/kernel_device_modules-6.1/drivers/nvmem/: Kconfig  Makefile  mt6681-efuse.c  mtk-devinfo.c
kernel/kernel_device_modules-6.1/drivers/pinctrl/: Kconfig
kernel/kernel_device_modules-6.1/drivers/pwm/: Kconfig  Makefile  pwm-mtk-disp.c
kernel/kernel_device_modules-6.1/drivers/regulator/: Kconfig  Makefile  max77816.c  mt6315-regulator.c  mt6316-regulator.c  mt6373-regulator.c  mt6681-regulator.c  mtk-dvfsrc-regulator.c  mtk-vmm-isp71-regulator.c  rt4803.c  rt5133-regulator.c  rt6160-regulator.c
kernel/kernel_device_modules-6.1/drivers/remoteproc/: Kconfig  Makefile  mtk_ccu_common.c  mtk_ccu_common.h  mtk_ccu_common_mssv.c  mtk_ccu_common_mssv.h  mtk_ccu_ipi.c  mtk_ccu_ipi_mssv.c  mtk_ccu_isp71.c  mtk_ccu_isp71.h  mtk_ccu_isp71_mssv.c  mtk_ccu_isp71_mssv.h  mtk_ccu_isp7sp_mssv_ddr.h  mtk_ccu_isp7sp_mssv_ddr_b.h  mtk_ccu_isp7sp_mssv_dmem.h  mtk_ccu_isp7sp_mssv_dmem_b.h  mtk_ccu_isp7sp_mssv_pmem.h  mtk_ccu_isp7sp_mssv_pmem_b.h  mtk_ccu_isp7spl_mssv_pmem.h
kernel/kernel_device_modules-6.1/drivers/reset/: Kconfig  Makefile
kernel/kernel_device_modules-6.1/drivers/rpmsg/: Kconfig  Makefile
kernel/kernel_device_modules-6.1/drivers/rtc/: Kconfig  Makefile  rtc-mt6685.c
kernel/kernel_device_modules-6.1/drivers/samsung/: Kconfig  Makefile  sec_bootstat.c  sec_crash_key.c  sec_extention.c  sec_reboot.c
kernel/kernel_device_modules-6.1/drivers/sdp/: Kconfig  Makefile  adaptive_mipi_v2.c  sdp_debug.c
kernel/kernel_device_modules-6.1/drivers/sec_panel_notifier_v2/: Makefile
kernel/kernel_device_modules-6.1/scripts/: gen_build_config.py  gki_checker_white_list.txt  legacy_build.sh
prebuilts/build-tools/: Android.bp  BUILD.bazel  METADATA  build-prebuilts.sh  build-tools-kzip.sh  manifest.xml  update-prebuilts.sh
prebuilts/build-tools/tests/: BUILD.bazel  path_test.sh
prebuilts/kernel-build-tools/: BUILD.bazel  OWNERS  build-prebuilts.sh  cc.bzl  manifest.xml
projects/s5e8845/: BUILD.bazel  build.config.s5e8845.common  build.config.s5e8845_eng  build.config.s5e8845_eng_kasan  build.config.s5e8845_user  build.config.s5e8845_userdebug  s5e8845.bzl  s5e8845_model_variant_modules.bzl  s5e8845_modules.bzl  vendor_dlkm_props
(+70236 files in other folders)
