# Copyright (C) 2021 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(
    default_visibility = [
        "//visibility:public",
    ],
)

load(":s5e8845_modules.bzl", "VENDOR_DLKM_MODULE_LIST")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load(":s5e8845.bzl", "define_s5e8845_kernel")

write_file(
    name = "init_insmod_vendor_dlkm_list",
    out = "init.insmod.vendor_dlkm.cfg",
    content = VENDOR_DLKM_MODULE_LIST,
)

define_s5e8845_kernel(name = "s5e8845_eng")
define_s5e8845_kernel(name = "s5e8845_eng_fac")
define_s5e8845_kernel(name = "s5e8845_eng_kasan")
define_s5e8845_kernel(name = "s5e8845_eng_kasan_fac")
define_s5e8845_kernel(name = "s5e8845_userdebug")
define_s5e8845_kernel(name = "s5e8845_userdebug_fac")
define_s5e8845_kernel(name = "s5e8845_user")
define_s5e8845_kernel(name = "s5e8845_user_fac")
define_s5e8845_kernel(name = "s5e8845_abi")
define_s5e8845_kernel(name = "s5e8845_abi_fac")
